2006-09-05  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/copy/src/copy.c: gcc warning

	* configure: resync with my-autoconf

	* aclocal.m4: resync with my-autoconf (comments changed)

2004-03-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/checkin/src/rcsput.c, src/checkin/src/checkin.c, src/vcs/src/delete.c, src/vcs/src/insert.c, src/vcs/src/unlock.c, src/vcs/src/vcs.c, src/vcs/src/vcs.h, src/permit/src/permit.c, src/link2rcs/src/link2rcs.c, src/copy/src/copy.c, src/checkup/src/checkup.c, src/checkout/src/rcsget.c, src/checkout/src/checkout.c, src/baseline/src/baseline.c:
	remove K&R support, indent'd

	* makefile.in: remove certify

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: resync with my-autoconf

2003-04-30  Thomas E. Dickey  <dickey@invisible-island.net>

	* configure: RCS_BASE

	* aclocal.m4:
	resync with my-autoconf (adds version number and timestamp to each macro,
	some restructuring split-out CF_SUBDIR_PATH)

2002-07-05  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/checkin/src/checkin.c, src/checkup/src/checkup.c, src/copy/src/copy.c, src/link2rcs/src/link2rcs.c:
	change ifdef convention to work with "gcc -Wundef"

2002-07-03  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/copy/src/copy.c:
	oops - had typed sizeof(char*) rather than sizeof(char).

	* src/copy/src/copy.c:
	noticed that I didn't check if input stream was nonzero before trying to close it (fix)

	* src/copy/src/copy.c:
	workaround for a bug I noticed in mirroring across NFS - root's permissions
	let it open a file for input but not read from it.  So I check if I can
	read from the input before trying to open the output.

	* src/checkout/src/checkout.c: gcc warnings ('tell' was a variable)

	* src/link2rcs/src/link2rcs.c, src/permit/src/permit.c: gcc warnings

	* src/baseline/src/baseline.c, src/checkin/src/checkin.c, src/checkup/src/checkup.c:
	use UCH() to fix char-subscript warnings in gcc.
