@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20060905
+MANIFEST for cm_tools, version t20061023
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
